--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <security-constraint>
+        <display-name>Restrict direct access to view resources.</display-name>
+        <web-resource-collection>
+            <web-resource-name>Restricted folders</web-resource-name>
+            <url-pattern>/html/*</url-pattern>
+            <url-pattern>/xml/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint />
+    </security-constraint>
+    <filter>
+        <filter-name>APIFilter</filter-name>
+        <filter-class>controller.APIFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>APIFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>controller.Controller</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
-        <url-pattern>/website/*</url-pattern>
+        <url-pattern>/commands</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
